--- a/layout_parts/q3/css/style.css
+++ b/layout_parts/q3/css/style.css
@@ -1,5 +1,37 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
-
+table{
+  width: 100%;
+}
+table th{
+  width: 16%;
+  font-size: 18px;
+  line-height: 26px;
+  background-color: #2244aa;
+  color: white;
+  border: solid #dedede 1px;
+  padding: 10px;
+}
+table th{
+  width: 16%;
+  font-size: 18px;
+  line-height: 26px;
+  background-color: #2244aa;
+  color: white;
+  border: solid #dedede 1px;
+  padding: 10px;
+}
+table td{
+  padding: 10px;
+  font-size: 16px;
+  line-height: 22px;
+  text-align: center;
+}
+table tr:last-child{
+  border-top:  dashed #000 2px ;
+}
+table tr:nth-child(2n+1){
+  background-color: #ecf1f2;
+}
 /* 回答はここに書いてね */
