--- a/layout_parts/q5/css/style.css
+++ b/layout_parts/q5/css/style.css
@@ -5,14 +5,122 @@
   width: 500px;
   height: 500px;
   background-color: #ecf1f2;
+  position: relative;
+  margin: auto;
 }
 .one{
   width: 100px;
   height: 100px;
   background-color: #ffefd3;
-  position: relative;
+  position: absolute;
   top:40px;
   left:200px;
+  line-height:100px;
+  text-align:center;
+  vertical-align:middle;
+  z-index: 8;
+}
+.one:before{
+  position: absolute;
+  content: '';
+  bottom: 0;
+  left: 0;
+  background-color: #de70cf;
+  width: 20px;
+  height: 20px;
+  z-index: 9;
+}
+.two{
+  width: 100px;
+  height: 100px;
+  background-color: #7084de;
+  position: absolute;
+  top:120px;
+  left:280px;
+  line-height:100px;
+  text-align:center;
+  vertical-align:middle;
+  z-index: 7;
+}
+.three{
+  width: 100px;
+  height: 100px;
+  background-color: #d0ecea;
+  position: absolute;
+  top:200px;
+  left:360px;
+  line-height:100px;
+  text-align:center;
+  vertical-align:middle;
+  z-index: 6;
+}
+.four{
+  width: 100px;
+  height: 100px;
+  background-color: #8b7a5e;
+  position: absolute;
+  top:280px;
+  left:280px;
+  line-height:100px;
+  text-align:center;
+  vertical-align:middle;
+  z-index: 5;
+}
+.five{
+  width: 100px;
+  height: 100px;
+  background-color: #9fd6d2;
+  position: absolute;
+  top:360px;
+  left:200px;
+  line-height:100px;
+  text-align:center;
+  vertical-align:middle;
+  z-index: 4;
+}
+.six{
+  width: 100px;
+  height: 100px;
+  background-color: #fffee4;
+  position: absolute;
+  top:280px;
+  left:120px;
+  line-height:100px;
+  text-align:center;
+  vertical-align:middle;
+  z-index: 3;
+}
+.seven{
+  width: 100px;
+  height: 100px;
+  background-color: #deae70;
+  position: absolute;
+  top:200px;
+  left:40px;
+  line-height:100px;
+  text-align:center;
+  vertical-align:middle;
+  z-index: 2;
+}
+.eight{
+  width: 100px;
+  height: 100px;
+  background-color: #de70cf;
+  position: absolute;
+  top:120px;
+  left:120px;
+  line-height:100px;
+  text-align:center;
+  vertical-align:middle;
+  z-index: 1;
+}
+.nine{
+  width: 100px;
+  height: 100px;
+  background-color: #2b69a3;
+  position: fixed;
+  top:10px;
+  left:10px;
   line-height:100px;
   text-align:center;
   vertical-align:middle;
