--- a/layout_parts/q6/css/style.css
+++ b/layout_parts/q6/css/style.css
@@ -1,5 +1,62 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
-
+.q6__box .boxp{
+  background-color: #e6f2ff;
+  width: 90px;
+  padding: 10px 0px;
+  margin: auto;
+  text-align: center;
+}
+.text{
+  text-align: center;
+}
+.text .textp{
+  background-color: #e6f2ff;
+  display: inline-block;
+  width: 90px;
+  padding: 10px 0px;
+}
+.q6table{
+  display: table;
+}
+.q6table .q6tablecell{
+  display: table-cell;
+  text-align: center;
+  vertical-align: middle;
+}
+.q6table .q6tablecell .q6tabletext{
+  display: inline-block;
+  background-color: #fff;
+  padding: 10px;
+}
+.q6flex{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.flextext{
+  background-color: #fff;
+  padding: 10px;
+}
+.posi_fle_wrapper{
+  position: relative;
+}
+.posi_fle_text{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+}
+.posi_sta_wrapper{
+  position: relative;
+}
+.posi_sta_text{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
 /* 回答はここに書いてね */
