--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -1,5 +1,235 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
-
+.common{
+  background-color:#00bcd4;
+  color: #fff;
+  display: inline-block;
+  margin-left: 10px;
+  text-align: center;
+  cursor: pointer;
+}
+.error{
+  background-color:#ff4081;
+  color: #fff;
+  display: inline-block;
+  margin-left: 10px;
+  text-align: center;
+  cursor: pointer;
+}
+.disabled{
+  background-color:#e5e5e5;
+  color: #fff;
+  display: inline-block;
+  margin-left: 10px;
+  text-align: center;
+  cursor: pointer;
+}
+.shadow{
+  background-color:#fff;
+  color: #222;
+  display: inline-block;
+  margin-left: 10px;
+  text-align: center;
+  cursor: pointer;
+  box-shadow: 0 1px 6px rgba(0,0,0,.12);
+}
+.small{
+  padding: 0 15px;
+  border-radius: 3px;
+  font-size: 16px;
+  line-height: 26px;
+}
+.middle{
+  padding: 0 20px;
+  border-radius: 5px;
+  font-size: 20px;
+  line-height: 32px;
+}
+.large{
+  padding: 0 25px;
+  border-radius: 7px;
+  font-size: 24px;
+  line-height: 38px;
+}
+.excercise{
+  width: 700px;
+  background-color: #ECF1F2;
+  overflow: hidden;
+  padding: 20px;
+  margin: auto;
+}
+.entryform{
+  width: 300px;
+  float: left;
+}
+.memoform{
+  width: 390px;
+  float: left;
+}
+.clearfix::after{
+    display: block;
+    content: "";
+    clear: both;
+}
+.entry{
+  margin-top:20px;
+}
+.entry:first-child{
+  margin-top:0px;
+}
+.formtytle{
+  background-color: #ECF1F2;
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.item_tytle{
+  width: 100px;
+  float: left;
+  text-align: right;
+  margin-right: 20px;
+  padding-top: 5px;
+}
+.text_entry{
+  border: none;
+  font-size: 16px;
+  outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 160px;
+  padding: 5px;
+  border-radius: 3px;
+  background-color: #FFF;
+  font-size: 12px;
+  line-height: 12px;
+  box-sizing: border-box;
+}
+.text_entry:focus{
+  box-shadow: 0 0 7px #00BCD4;
+}
+/*全くわからん*/
+.radio_entry{
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width:14px;
+  height:14px;
+  border:1px solid #ccc;
+  border-radius:50%;
+  background:transparent;
+  cursor: pointer ;
+  background-color: #fff;
+  vertical-align: middle;
+  position: relative;
+}
+.radio_entry:checked:after{
+    display: block;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    content: "";
+  	width: 8px;
+	height: 8px;
+    background: #00BCD4;
+    -webkit-border-radius: 12px;
+    border-radius: 12px;
+}/*全くわからん*/
+.memo{
+  width: 100%;
+  height: 200px;
+  padding: 10px;
+}
+/*全くわからん*/
+.select{    
+    position: relative;}
+.select:after{  
+  display: block;
+  position: absolute;
+  top: 4px;
+  right: 30px;
+  width: 8px;
+  height: 8px;
+  border-right: 2px solid #E5E5E5;
+  border-bottom: 2px solid #E5E5E5;
+  transform: rotate(45deg);
+  content: "";
+  pointer-events: none;
+}/*全くわからん*/
+.select_entry{
+  border: none;
+  outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width: 160px;
+  padding: 5px;
+  border-radius: 3px;
+  background-color: #FFF;
+  font-size: 12px;
+  line-height: 12px;
+  box-sizing: border-box;
+}
+.subbutton{
+  text-align: right;
+  margin-top: 20px;
+  margin-right: 20px;
+}/*全くわからん*/
+.age{
+  text-align: right;
+  margin-top: 20px;
+  margin-right: 20px;
+}
+.agecheck{
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  width:20px;
+  height:20px;
+  border:1px solid #ccc;
+  background:transparent;
+  cursor: pointer ;
+  background-color: #fff;
+  vertical-align: middle;
+  position: relative;
+  margin-right: 10px;
+}
+.agecheck:before {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 16px;
+  height: 16px;
+  margin-top: -9px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  content: '';
+}
+.agecheck:checked:after{
+  position: absolute;
+  top: 50%;
+  left: 6px;
+  margin-top: -14px;
+  width: 8px;
+  height: 16px;
+  border-right: 3px solid #00BCD4;
+  border-bottom: 3px solid #00BCD4;
+  transform: rotate(45deg);
+  content: '';
+}/*全くわからん*/
+.button {
+  display: inline-block;
+  border-radius: 5px; 
+  font-size: 16px;  
+  cursor: pointer; 
+  padding: 0px 10px; 
+  background-color: #00BCD4;
+  color: #ffffff;
+  line-height: 26px; 
+  border: none;
+}
+.require{
+  color: #F00;
+}
 /* 回答はここに書いてね */
