--- a/layout_parts/q3/css/style.css
+++ b/layout_parts/q3/css/style.css
@@ -1,37 +1,32 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
-table{
+.main{
+  table-layout: fixed;
   width: 100%;
 }
-table th{
-  width: 16%;
+.main th{
+  background-color: #2244aa;
+  border: solid #dedede 1px;
+  color: white;
   font-size: 18px;
   line-height: 26px;
-  background-color: #2244aa;
-  color: white;
-  border: solid #dedede 1px;
   padding: 10px;
 }
-table th{
-  width: 16%;
-  font-size: 18px;
-  line-height: 26px;
-  background-color: #2244aa;
-  color: white;
+.main td{
   border: solid #dedede 1px;
-  padding: 10px;
-}
-table td{
-  padding: 10px;
   font-size: 16px;
   line-height: 22px;
+  padding: 10px 0px;
   text-align: center;
 }
-table tr:last-child{
+.main tr{
+  border: solid #dedede 1px;
+}
+.main tr:last-child{
   border-top:  dashed #000 2px ;
 }
-table tr:nth-child(2n+1){
+.main tr:nth-child(2n+1){
   background-color: #ecf1f2;
 }
 /* 回答はここに書いてね */
