--- a/layout_parts/q4/css/style.css
+++ b/layout_parts/q4/css/style.css
@@ -1,60 +1,42 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
-.q4{
+.content{
   background-color: #ecf1f2;
   padding:20px;
 }
-.parent1{
+.content__table{
   display: table;
   width: 100%;
 }
-.parent2{
+.content .content__table:last-child{
   margin-top: 30px;
-  display: table;
-  width: 100%;
 }
-.child{
-  display: table-cell;
-}
-.parent1 .child:nth-child(1){
+.content__table__child{
   display: table-cell;
   padding:20px;
+  text-align: center;
+}
+.content__table:first-child .content__table__child:nth-child(1){
   background-color: #fbc8b8;
   width: 100px;
-  text-align: center;
 }
-.parent1 .child:nth-child(2){
-  display: table-cell;
-  padding:20px;
+.content__table:first-child .content__table__child:nth-child(2){
   background-color: #e0abd9;
-  text-align: center;
 }
-.parent1 .child:nth-child(3){
-  display: table-cell;
-  padding:20px;
+.content__table:first-child .content__table__child:nth-child(3){
   background-color: #b6d8ed;
   width: 100px;
-  text-align: center;
 }
-.parent2 .child:nth-child(1){
-  display: table-cell;
-  padding:20px;
+.content__table:last-child .content__table__child:nth-child(1){
   background-color: #e5d32e;
-  text-align: center;
 }
-.parent2 .child:nth-child(2){
-  display: table-cell;
-  padding:20px;
+.content__table:last-child .content__table__child:nth-child(2){
   background-color: #ec8f9a;
-  text-align: center;
 }
-.parent2 .child:nth-child(3){
-  display: table-cell;
-  padding:20px;
+.content__table:last-child .content__table__child:nth-child(3){
   background-color: #8fdcad;
   width: 500px;
-  text-align: center;
 }
 
 /* 回答はここに書いてね */
