--- a/layout_parts/q5/css/style.css
+++ b/layout_parts/q5/css/style.css
@@ -1,129 +1,84 @@
 @charset "UTF-8";
 
 /* 回答はここに書いてね */
-.q5{
-  width: 500px;
-  height: 500px;
+.content{
   background-color: #ecf1f2;
-  position: relative;
+  height: 500px;
   margin: auto;
+  position: relative;
+  width: 500px;
+}
+.number{
+  height: 100px;
+  line-height:100px;
+  position: absolute;
+  text-align:center;
+  vertical-align:middle;
+  width: 100px;
 }
 .one{
-  width: 100px;
-  height: 100px;
   background-color: #ffefd3;
-  position: absolute;
-  top:40px;
   left:200px;
-  line-height:100px;
-  text-align:center;
-  vertical-align:middle;
-  z-index: 8;
-}
-.one:before{
-  position: absolute;
-  content: '';
-  bottom: 0;
-  left: 0;
-  background-color: #de70cf;
-  width: 20px;
-  height: 20px;
-  z-index: 9;
+  top:40px;
+  z-index: 1;
 }
 .two{
-  width: 100px;
-  height: 100px;
   background-color: #7084de;
-  position: absolute;
+  left:280px;
   top:120px;
-  left:280px;
-  line-height:100px;
-  text-align:center;
-  vertical-align:middle;
-  z-index: 7;
-}
-.three{
-  width: 100px;
-  height: 100px;
-  background-color: #d0ecea;
-  position: absolute;
-  top:200px;
-  left:360px;
-  line-height:100px;
-  text-align:center;
-  vertical-align:middle;
-  z-index: 6;
-}
-.four{
-  width: 100px;
-  height: 100px;
-  background-color: #8b7a5e;
-  position: absolute;
-  top:280px;
-  left:280px;
-  line-height:100px;
-  text-align:center;
-  vertical-align:middle;
-  z-index: 5;
-}
-.five{
-  width: 100px;
-  height: 100px;
-  background-color: #9fd6d2;
-  position: absolute;
-  top:360px;
-  left:200px;
-  line-height:100px;
-  text-align:center;
-  vertical-align:middle;
-  z-index: 4;
-}
-.six{
-  width: 100px;
-  height: 100px;
-  background-color: #fffee4;
-  position: absolute;
-  top:280px;
-  left:120px;
-  line-height:100px;
-  text-align:center;
-  vertical-align:middle;
-  z-index: 3;
-}
-.seven{
-  width: 100px;
-  height: 100px;
-  background-color: #deae70;
-  position: absolute;
-  top:200px;
-  left:40px;
-  line-height:100px;
-  text-align:center;
-  vertical-align:middle;
   z-index: 2;
 }
-.eight{
-  width: 100px;
-  height: 100px;
-  background-color: #de70cf;
-  position: absolute;
-  top:120px;
+.three{
+  background-color: #d0ecea;
+  left:360px;
+  top:200px;
+  z-index: 3;
+}
+.four{
+  background-color: #8b7a5e;
+  left:280px;
+  top:280px;
+  z-index: 4;
+}
+.five{
+  background-color: #9fd6d2;
+  left:200px;
+  top:360px;
+  z-index: 5;
+}
+.six{
+  background-color: #fffee4;
   left:120px;
-  line-height:100px;
-  text-align:center;
-  vertical-align:middle;
-  z-index: 1;
+  top:280px;
+  z-index: 6;
+}
+.seven{
+  background-color: #deae70;
+  left:40px;
+  top:200px;
+  z-index: 7;
+}
+.eight{
+  background-color: #de70cf;
+  left:120px;
+  top:120px;
+  z-index: 8;
+}
+.eight:before{
+  background-color: #ffefd3;
+  content: '';
+  height: 20px;
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  width: 20px;
+  z-index: 9;
 }
 .nine{
-  width: 100px;
-  height: 100px;
   background-color: #2b69a3;
+  left:10px;
   position: fixed;
   top:10px;
-  left:10px;
-  line-height:100px;
-  text-align:center;
-  vertical-align:middle;
-  z-index: 1;
+  z-index: 9;
 }
 /* 回答はここに書いてね */
