--- a/layout_parts/q4/css/style.css
+++ b/layout_parts/q4/css/style.css
@@ -17,24 +17,24 @@
   padding:20px;
   text-align: center;
 }
-.content__table:first-child .content__table__child:nth-child(1){
+.orange{
   background-color: #fbc8b8;
   width: 100px;
 }
-.content__table:first-child .content__table__child:nth-child(2){
+.purple{
   background-color: #e0abd9;
 }
-.content__table:first-child .content__table__child:nth-child(3){
+.blue{
   background-color: #b6d8ed;
   width: 100px;
 }
-.content__table:last-child .content__table__child:nth-child(1){
+.yellow{
   background-color: #e5d32e;
 }
-.content__table:last-child .content__table__child:nth-child(2){
+.red{
   background-color: #ec8f9a;
 }
-.content__table:last-child .content__table__child:nth-child(3){
+.green{
   background-color: #8fdcad;
   width: 500px;
 }
