--- a/layout_parts/q8/css/style.css
+++ b/layout_parts/q8/css/style.css
@@ -150,7 +150,8 @@ content: "";
   width: 100%;
   height: 200px;
   padding: 10px;
-}
+  resize: none;
+}/*resize:none*/
 .select{
     position: relative;
 }
